--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ clap = { version = "4.0", features = ["derive"] }
 walkdir = "2.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+rpassword = "7.3.1"  # New for securely inputting passwords
