--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ walkdir = "2.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rpassword = "7.3.1"  # New for securely inputting passwords
+
+reqwest = { version = "0.12.7", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
+dotenv = "0.15"
